tools/sddl/assembler/tests/success/push_i64_min.asm
push.i64 -9223372036854775808
halt
