tools/sddl/assembler/tests/fail/push_i64_overflow.asm
# EXPECT-ERROR: out of range
push.i64 9223372036854775808
halt
